--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,142 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:focusable="true"
-    android:focusableInTouchMode="true"
-    android:orientation="vertical">
+    android:background="#BCECE0"
+    tools:context=".MainActivity">
 
 
     <TextView
+        android:id="@+id/app"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:padding="15dp"
-        android:text="@string/data_penduduk"
-        android:textSize="40sp"
         android:gravity="center"
-        android:textColor="@android:color/holo_red_dark"
-        android:textStyle="bold"/>
+        android:padding="15dp"
+        android:text="@string/member"
+        android:textColor="#4C5270"
+        android:textSize="40sp"
+        android:textStyle="bold" />
 
 
     <EditText
         android:id="@+id/nama"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/app"
         android:layout_marginTop="10dp"
-        android:padding="15dp"
-        android:hint="@string/masukan_nama_lengkap"
+        android:hint="@string/Name"
+        android:textColorHint="@color/text"
+        android:importantForAutofill="no"
         android:inputType="textPersonName|textCapWords"
         android:nextFocusDown="@id/email"
-        android:importantForAutofill="no" />
+        android:padding="15dp"
+        android:textColor="@color/text"/>
 
     <EditText
         android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/nama"
         android:layout_marginTop="10dp"
-        android:padding="15dp"
         android:hint="@string/email"
+        android:textColorHint="@color/text"
+        android:textColor="@color/text"
         android:inputType="textEmailAddress"
-        android:nextFocusDown="@id/NIK"
+        android:padding="15dp"
         tools:ignore="Autofill" />
-    <EditText
-        android:id="@+id/NIK"
+
+    <TextView
+        android:id="@+id/txtgender"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/email"
         android:layout_marginTop="10dp"
         android:padding="15dp"
-        android:hint="@string/nik"
-        android:inputType="number"
-        android:autofillHints="" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:text="@string/gender"
         android:textSize="18sp"
-        android:layout_marginTop="10dp"
-        android:padding="15dp"/>
+        android:textColor="@color/crypto"/>
+
     <RadioGroup
         android:id="@+id/gender"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:orientation="horizontal"
-        android:checkedButton="@id/laki">
+        android:layout_below="@id/txtgender"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:orientation="horizontal">
 
 
         <RadioButton
             android:id="@+id/laki"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/laki_laki"/>
+            android:layout_marginEnd="20dp"
+            android:text="@string/Female"
+            android:textColor="@color/crypto" />
 
         <RadioButton
             android:id="@+id/perem"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/perempuan"/>
+            android:layout_marginStart="20dp"
+            android:text="@string/Male"
+            android:textColor="@color/crypto" />
 
     </RadioGroup>
 
     <EditText
-        android:id="@+id/TTL"
+        android:id="@+id/Birthdate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/gender"
         android:layout_marginTop="10dp"
-        android:padding="15dp"
-        android:hint="@string/ttl"
+        android:autofillHints=""
+        android:hint="@string/BD"
+        android:textColorHint="@color/text"
+        android:textColor="@color/text"
         android:inputType="text"
         android:nextFocusDown="@id/alamat"
-        android:autofillHints="" />
+        android:padding="15dp" />
 
     <EditText
         android:id="@+id/alamat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/Birthdate"
         android:layout_marginTop="10dp"
-        android:padding="15dp"
+        android:layout_marginBottom="20dp"
+        android:autofillHints=""
+        android:hint="@string/address"
+        android:textColorHint="@color/text"
+        android:textColor="@color/text"
         android:inputType="textCapWords"
-        android:hint="@string/alamat"
-        android:nextFocusDown="@id/telpon"
-        android:autofillHints="" />
+        android:padding="15dp" />
 
-    <EditText
-        android:id="@+id/telpon"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:padding="15dp"
-        android:hint="@string/phone_number"
-        android:inputType="phone"
-        android:autofillHints="" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
     <Button
+        android:id="@+id/btn_smb"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:backgroundTint="#F652A0"
+        android:onClick="Submit"
         android:padding="15dp"
         android:text="@string/submit"
-        android:textColorHighlight="@color/black"
         android:textColor="@color/black"
-        android:textStyle="bold"
         android:textSize="20sp"
-        android:onClick="Submit"/>
-    </RelativeLayout>
+        android:textStyle="bold" />
 
 
-
-
-
-
-
-
-
-
-</LinearLayout>
+</RelativeLayout>
